--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,3 +21,4 @@
 </div>
 
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
+<div class="page__footer-copyright"><a href="https://geboe.github.io/impressum/">Impressum</a> &amp; <a href="https://geboe.github.io/datenschutz/">Datenschutzerklärung</a></div>
