--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,4 +22,4 @@
 </div>
 -->
 <!-- <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>-->
-<div class="page__footer-copyright"><p style="font-weight:bold"><a href="https://geboe.github.io/impressum/"><span style="width:50px;display:block;float:left;">IMPRESSUM</span></a><a href="https://geboe.github.io/datenschutz/">DATENSCHUTZERKLÄRUNG</a></p></div>
+<div class="page__footer-copyright"><p style="font-weight:bold"><a href="https://geboe.github.io/impressum/"><span style="width:100px">IMPRESSUM</span></a><a href="https://geboe.github.io/datenschutz/">DATENSCHUTZERKLÄRUNG</a></p></div>
