--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
   </ul>
 </div>
 -->
-<div class="page__footer-copyright"><p style="font-weight:bold"><a href="https://geboe.github.io/impressum/">IMPRESSUM</a>&nbsp; &nbsp; &nbsp;<a href="https://geboe.github.io/datenschutz/">DATENSCHUTZERKLÄRUNG</a></p></div><a href="http://www.andyhoppe.com/" title="Besucherzaehler"><img 
-src="//c.andyhoppe.com/1503683445" style="border:none" alt="Besucherzaehler" /></a>
+<div class="page__footer-copyright"><p style="font-weight:bold"><a href="https://geboe.github.io/impressum/">IMPRESSUM</a>&nbsp; &nbsp; &nbsp;<a href="https://geboe.github.io/datenschutz/">DATENSCHUTZERKLÄRUNG</a>&nbsp; &nbsp; &nbsp;<a href="http://www.andyhoppe.com/" title="Besucherzaehler"><img 
+src="//c.andyhoppe.com/1503683445" style="border:none" alt="Besucherzaehler" /></a></p></div>
 <div class="page__footer-copyright">&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }}. {{ site.data.ui-text[site.locale].powered_by | default: "Powered by" }} <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.</div>
 <!-- ; white-space: pre -->
